tests/__snapshots__/api-toBeString.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeString: stderr 1`] = `
"Error: The source type is 'void'.

   7 |   expect(returnsString()).type.toBeString();
   8 | 
>  9 |   expect(returnsVoid()).type.toBeString();
     |                              ^
  10 | });
  11 | 
  12 | test("is NOT string?", () => {

       at ./__typetests__/toBeString.tst.ts:9:30 ❭ is string?

Error: The source type is 'string'.

  13 |   expect(returnsVoid()).type.not.toBeString();
  14 | 
> 15 |   expect(returnsString()).type.not.toBeString();
     |                                    ^
  16 | });
  17 | 

       at ./__typetests__/toBeString.tst.ts:15:36 ❭ is NOT string?

"
`;

exports[`toBeString: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeString.tst.ts
  × is string?
  × is NOT string?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
